--- a/Team-G_BackPropagation/Team-G_BackPropagation/Form1.resx
+++ b/Team-G_BackPropagation/Team-G_BackPropagation/Form1.resx
@@ -134,8 +134,7 @@ Preparation to midterm exams 2: (1: closest date to the exam, 2: regularly durin
 Taking notes in classes: (1: never, 2: sometimes, 3: always)
 Listening in classes: (1: never, 2: sometimes, 3: always)
 Discussion improves my interest and success in the course: (1: never, 2: sometimes, 3: always)
-Cumulative grade point average in the last semester (/4.00): (1: &lt;2.00, 2: 2.00-2.49, 3: 2.50-2.99, 4: 3.00-3.49, 5: above 3.49)
-OUTPUT Grade (0: Fail, 1: DD, 2: DC, 3: CC, 4: CB, 5: BB, 6: BA, 7: AA)</value>
+Cumulative grade point average in the last semester (/4.00): (1: &lt;2.00, 2: 2.00-2.49, 3: 2.50-2.99, 4: 3.00-3.49, 5: above 3.49)</value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>291, 17</value>
